--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,20 +6,17 @@ body {
 h1 {
 	font-size: 3.125rem;
 	text-align: center;
-	font-family: 'Oswald', sans-serif;
-	font-weight: 600;
+	font-family: sans-serif;
 }
 
 h2 {
 	font-size: 2rem;
 	text-align: center;
-	font-family: 'Oswald', sans-serif;
-	font-weight: 600;
+	font-family: sans-serif;
 }
 
 p {
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 300;
+	font-family: sans-serif;
 }
 
 a {
