--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,6 +34,7 @@ a {
 	height: 100%;
 	object-fit: cover;
 }
+
 /*Nav*/
 
 nav {
@@ -53,27 +54,33 @@ li {
 
 #about-my-dad {
 	display: grid;
-	width: 80%;
-	grid-template: 3fr 2fr 3fr 1fr 3fr 2fr 3fr / 2fr 1fr 2fr;/*Need to put some max values on this for responsiveness*/
+	width: 70%;
+	/*grid-template: 2fr minmax(11.25rem, 4fr) 2fr 1fr 2fr minmax(11.25rem, 4fr) 2fr / 2fr 1fr 2fr;*//*Need to put some max values on this for responsiveness*/
+	grid-template: 22.5rem 2.5% 22.5rem / 2fr 1fr 2fr;
 	justify-content: center;/*This isn't working?*/
+	align-items: center;
 	margin: 0 auto;
 }
 
 #about-my-dad-grid-item-a {
-	grid-area: 1 / 1 / span 3 / span 2;
+	/*grid-area: 1 / 1 / span 3 / span 2;*/
+	grid-area: 1 / 1 / span 1 / span 2;
 }
 
 #about-my-dad-grid-item-b {
-    grid-area: 2 / 2 / span 1 / span 2;
+    /*grid-area: 2 / 2 / span 1 / span 2;*/
+    grid-area: 1 / 2 / span 1 / span 2;
 }
 
 #about-my-dad-grid-item-c {
-	grid-area: 6 / 1 / span 1 / span 2;
+	/*grid-area: 6 / 1 / span 1 / span 2;*/
+	grid-area: 3 / 1 / span 1 / span 2;
 	z-index: 1;
 }
 
 #about-my-dad-grid-item-d {
-    grid-area: 5 / 2 / span 3 / span 2;
+    /*grid-area: 5 / 2 / span 3 / span 2;*/
+    grid-area: 3 / 2 / span 1 / span 2;
 }
 
 /*My dad's work*/
@@ -81,8 +88,8 @@ li {
 #my-dads-work {
 	display: grid;
 	grid-auto-flow: column;
-	width: 90%;
-	grid-template: 1.5fr 1fr/ 1fr 1fr 1fr;
+	width: 70%;
+	grid-template: 12rem 1fr/ 1fr 1fr 1fr;
 	margin: 0 auto;
 	justify-content: center;/*This isn't working?*/
 	grid-column-gap: 1.5rem;
@@ -97,8 +104,9 @@ li {
 
 #about-me-ralph {
 	display: grid;
-	width: 80%;
-	grid-template: 1fr 2.5fr 1fr 2.5fr 1fr 2.5fr 1fr 2.5fr 1fr 2.5fr 1fr 2.5fr 1fr/ 3fr 0.1fr 2fr 1fr 2fr 0.1fr 3fr;
+	width: 70%;
+	grid-template: 1fr minmax(14.625rem, 10fr) 1fr minmax(14.625rem, 10fr) 1fr minmax(14.625rem, 10fr) 1fr minmax(14.625rem, 10fr) 1fr minmax(14.625rem, 10fr) 1fr minmax(14.625rem, 10fr) 1fr / 3fr 0.1fr 2fr 1fr 2fr 0.1fr 3fr;
+	align-items: center;
 	justify-content: center;/*This isn't working?*/
 	margin: 0 auto;
 }
